[metadata]
license_files = LICENSE

[versioneer]
VCS = git
style = pep440
versionfile_source = mlflow_mongostore/_version.py
versionfile_build = mlflow_mongostore/_version.py
tag_prefix =
parentdir_prefix = mlflow-mongostore-

[mypy]
files = mlflow_mongostore/**/*.py

[mypy-mlflow_mongostore._version]
ignore_errors = True